# retro-cplus-game

./: .gitignore  3d_checklist.md  Build.bat  CMakeLists.txt  PR_DESCRIPTION.md  Play.bat  README.md  imgui.ini  input_checklist.md  vcpkg.json
.windsurf/rules/: architecture.md  build.md  ci-cd.md  cmake-best-practices.md  cmake-guidelines.md  code-review.md  coding-standards-extended.md  coding-standards.md  comments.md  component-pattern.md  corporate-cicd-pipeline.md  corporate-code-review.md  corporate-coding-standards.md  corporate-documentation-pipeline.md  corporate-onboarding.md  cpp-guidelines.md  dependencies.md  documentation.md  entity-guidelines.md  error-handling.md  general.md  git-policy.md  json-formats.md  memory-safety.md  performance.md  rules-documentation.md  rules-oop-architecture.md  rules-workspace.md  sdl2-patterns.md  security.md  state-pattern.md  tech-stack.md  testing.md
.windsurf/workflows/: README.md  add-asset.md  add-component.md  add-system.md  add-test.md  build.md  code-review.md  compile.md  debug.md  end-session.md  generate-pr.md  git-commit.md  github-actions.md  handoff.md  hotfix.md  incident-response.md  init-session.md  investigate.md  new-feature.md  onboard-developer.md  profile.md  refactor.md  release.md  research.md  retrospective.md  run-tests.md  sprint-planning.md  update-commentary.md  update-docs.md  update-roadmap.md
assets/data/: items.json  keybindings.json  npcs.json  quests.json  rooms.json  rooms.json.bak  rooms_backup.json  rooms_with_grid.json  scenes.json  world.json
docs/: ARCHITECTURE.md  CHANGELOG.md  ICON_SETUP_GUIDE.md  INDEX.md  README.md  ROADMAP.md  retro-game.code-workspace
docs/adr/: 005-separate-engine-game-editor.md  006-remove-hot-reload.md  006-worldcontainer-hierarchy.md  007-runtime-architecture.md  007-spatial-grid-hierarchy.md  008-unified-3d-architecture.md
docs/api/: EditorPanels.md  SpatialGrid.md
docs/api/core/: Game.md
docs/api/systems/: AISystem.md  DialogSystem.md  InventorySystem.md  QuestSystem.md  SaveSystem.md
docs/architecture/: 2D-TO-3D-MIGRATION.md  3d-hierarchy-design.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_REFACTORING_PLAN.md  CODEBASE_ANALYSIS.md  Complete-Hierarchy.md  FAS6-CLEANUP-PLAN.md  Final-Hierarchy.md  GAMEBUILD.md  Migration-Strategy.md  MigrationChecklist.md  OOP-Hierarchy.md  Safe-Migration-Strategy.md  UE5-Comparison.md  VIEWPORT_REDESIGN.md  Visual-Architecture.md  WorldHierarchy.md  editor-system.md  entities.md  overview.md  states.md  unified-viewport-architecture.md  viewport-oop-inheritance.md
docs/design/: LUCASARTS-ROADMAP.md  lucasarts-insights-applied.md
docs/dev/: DEVLOG.md  PHYSICS_ROADMAP.md  actor-integration-checklist.md  spatial-grid-integration.md
docs/dev/decisions/: 001-sdl2-tech-stack.md  002-imgui-editor.md  _template.md
docs/dev/sessions/: 2026-01-04.md  2026-01-05.md  2026-01-06.md  2026-01-07.md  2026-01-08.md  2026-01-09.md
docs/editor/: ARCHITECTURE.md  PANELS.md  README.md
docs/features/: NodeSceneGraph.md
docs/guides/: AssetGuide.md  EditorWorkflow.md  FreeAssets.md  GettingStarted.md  SceneBuilding.md  complete-feature-guide.md  getting-started.md  tiled-multilayer.md  tiled-workflow.md
docs/migration/: LEGACY_NODES.md
docs/research/: AI-AGENT-RESEARCH.md  IMGUI_STYLING_RESEARCH.md
docs/sessions/: 2026-01-05.md
docs/studies/: lucasfilm-case-study.md  lucasfilm-in-depth.md  lucasfilm-other-insights.md
docs/technical/: build.md  data-formats.md  editor-architecture.md
generator/: README.md  generate_all.py
generator/scripts/: generate_actor_sprites.py  generate_backgrounds.py  generate_sprites.py  generate_tilesets.py  generate_ui.py
src/: Game.cpp  Game.h  Input.cpp  Input.h  Player.cpp  Player.h  Renderer.cpp  Room.cpp  Room.h  VideoSettings.cpp  VideoSettings.h  main.cpp
src/ai/: AISystemInit.cpp  AISystemInit.h
src/ai/core/: AIAgentSystem.cpp  AIAgentSystem.h  EditorToolRegistry.cpp  EditorToolRegistry.h  IEditorTool.h  ILLMProvider.h
src/ai/providers/: AnthropicProvider.cpp  AnthropicProvider.h  (+2 more)
src/audio/: AudioManager.cpp  AudioManager.h
src/data/: DataLoader.h  GameData.h  GameDataLoader.h  TiledImporter.cpp  TiledImporter.h
src/editor/: DebugEditor.cpp  EditorApp.cpp  EditorApp.h  EditorContext.cpp  EditorContext.h  EditorCore.cpp  EditorState.cpp  EditorState.h  EditorTabRenderer.cpp  IEditorCommand.h  IEditorPanel.h  ImGuiManager.cpp  ImGuiManager.h  RoomDataManager.cpp  RoomDataManager.h  TiledIntegration.cpp  VisualRoomEditor.cpp  VisualRoomEditor.h  main.cpp  resource.h
src/engine/: Hotspot.h  Renderer.cpp  Renderer.h  Room.cpp  Room.h  Scene.cpp  Scene.h
src/entities/: Character.cpp  Character.h  Entity.cpp  Entity.h  PlayerCharacter.cpp  PlayerCharacter.h
src/game/: Game.cpp  Game.h  main.cpp  resource.h
src/graphics/: Animation.cpp  Animation.h  FontManager.cpp  FontManager.h  SpriteSheet.cpp  SpriteSheet.h  Transition.cpp
src/launcher/: LauncherApp.cpp  LauncherApp.h  RetroLauncher.rc  main.cpp  resource.h
src/runtime/: RuntimeApp.cpp  RuntimeApp.h  RuntimeDialogSystem.cpp  RuntimeDialogSystem.h  RuntimeInventory.cpp  RuntimeInventory.h  RuntimeQuestSystem.cpp  RuntimeQuestSystem.h  RuntimeRenderer.cpp  RuntimeRenderer.h  RuntimeWorld.cpp  RuntimeWorld.h  main.cpp
src/states/: DialogState.cpp  DialogState.h  EditorState.cpp  EditorState.h  IState.h  InventoryState.cpp  InventoryState.h  MenuState.cpp  MenuState.h  OptionsState.cpp  OptionsState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  QuestLogState.cpp  QuestLogState.h  SaveLoadState.cpp  StateManager.cpp  StateManager.h
src/systems/: AISystem.cpp  AISystem.h  ConditionSystem.cpp  CutsceneSystem.cpp  DialogSystem.cpp  DialogSystem.h  EventBus.cpp  GateSystem.cpp  GateSystem.h  HintSystem.cpp  InventorySystem.cpp  InventorySystem.h  JournalSystem.cpp  QuestSystem.cpp  QuestSystem.h  RecapSystem.cpp  RecapSystem.h  RoomManager.cpp  RoomManager.h  SaveSystem.cpp  WorldQuery.cpp  WorldQuery.h  WorldState.cpp  WorldState.h
src/ui/: Widget.cpp  Widget.h
src/utils/: Logger.cpp
(+537 files in other folders)
